feat: Boilerplate started

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-avancado-boilerplate",
+  "name": "dwallet",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -25,11 +25,12 @@
     ]
   },
   "dependencies": {
-    "next": "9.5.4",
-    "next-pwa": "^3.1.5",
-    "react": "16.14.0",
-    "react-dom": "16.13.1",
-    "styled-components": "^5.2.1"
+    "next": "11.1.0",
+    "next-pwa": "^5.2.23",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "styled-components": "^5.2.1",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -47,6 +48,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.9.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.1",
