--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "next": "11.1.0",
+    "next-auth": "^3.28.0",
     "next-pwa": "^5.2.23",
     "react": "17.0.2",
     "react-dom": "17.0.2",
