--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 GOOGLE_ID=171522605651-ttde247f7r51ongoguqmsu91hecqou9p.apps.googleusercontent.com
 GOOGLE_SECRET=G_RBr9wHPZLxf1fkkxEONoPX
-PUBLIC_URL=http://localhost:3000
+NEXT_PUBLIC_URL=http://localhost:3000
+NEXTAUTH_URL=
