--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "next": "11.1.0",
     "next-auth": "^3.28.0",
     "next-pwa": "^5.2.23",
+    "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.2.1",
+    "styled-icons": "^10.37.0",
     "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
