--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "next": "11.1.0",
     "next-auth": "^3.28.0",
     "next-pwa": "^5.2.23",
