--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:watch": "yarn test --watch",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006 --no-dll",
-    "build-storybook": "build-storybook -s ./public --no-dll"
+    "build-storybook": "build-storybook -s ./public --no-dll",
+    "cover": "yarn test --coverage --watchAll=false"
+
   },
   "husky": {
     "hooks": {
@@ -21,9 +23,11 @@
   "lint-staged": {
     "src/**/*": [
       "yarn lint --fix",
-      "yarn test --findRelatedTests --bail"
+      "yarn test --findRelatedTests --bail",
+      "yarn cover"
     ]
   },
+
   "dependencies": {
     "axios": "^0.22.0",
     "next": "11.1.0",
