Feature/switch money to percentage #10 (#11)
* feat: Add switch functionality in balanceCards

* chore: Add CardBalance test and config jest coverage report folder

* chore: remove yarn cover in lint-staged config

* fix: type in InputWithLabel storie

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:watch": "yarn test --watch",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006 --no-dll",
-    "build-storybook": "build-storybook -s ./public --no-dll"
+    "build-storybook": "build-storybook -s ./public --no-dll",
+    "cover": "yarn test --coverage --watchAll=false"
+
   },
   "husky": {
     "hooks": {
@@ -24,6 +26,7 @@
       "yarn test --findRelatedTests --bail"
     ]
   },
+
   "dependencies": {
     "axios": "^0.22.0",
     "next": "11.1.0",
