--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:watch": "yarn test --watch",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006 --no-dll",
-    "build-storybook": "build-storybook -s ./public --no-dll"
+    "build-storybook": "build-storybook -s ./public --no-dll",
+    "cover": "yarn test --coverage --watchAll=false"
+
   },
   "husky": {
     "hooks": {
@@ -24,7 +26,9 @@
       "yarn test --findRelatedTests --bail"
     ]
   },
+
   "dependencies": {
+    "axios": "^0.22.0",
     "next": "11.1.0",
     "next-auth": "^3.28.0",
     "next-pwa": "^5.2.23",
