--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-redux": "^7.2.6",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.37.0",
