--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.22.0",
+    "jwt-decode": "^3.1.2",
     "next": "11.1.0",
     "next-auth": "^3.28.0",
     "next-pwa": "^5.2.23",
