--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-redux": "^7.2.6",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.37.0",
     "styled-media-query": "^2.1.2"
