--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.22.0",
+    "chart.js": "^3.6.2",
     "jwt-decode": "^3.1.2",
     "next": "11.1.0",
     "next-pwa": "^5.2.23",
     "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-redux": "^7.2.6",
